<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Base.MatchParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_xleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_xright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />


    <ImageView
        android:id="@+id/view_logos"
        android:layout_width="@dimen/_21sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/ic_data_usage_"
        android:visibility="gone"
        app:layout_constraintRight_toLeftOf="@+id/g_xright"
        app:layout_constraintTop_toBottomOf="@+id/g_top" />

    <androidx.cardview.widget.CardView
        android:id="@+id/security_card"
        style="@style/BASE_CARD_1.MW"
        android:layout_marginTop="@dimen/_20sdp"
        android:visibility="gone"
        app:layout_constraintLeft_toRightOf="@+id/g_xleft"
        app:layout_constraintRight_toLeftOf="@+id/g_xright"
        app:layout_constraintTop_toBottomOf="@+id/view_logos">

        <TextView
            android:id="@+id/security_txv"
            style="@style/Base_TXV_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"

            android:padding="@dimen/_6sdp"
            android:text="@string/security" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/pwd_manager_card"
        style="@style/BASE_CARD_1.MW"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintLeft_toRightOf="@+id/g_xleft"
        app:layout_constraintRight_toLeftOf="@+id/g_xright"
        app:layout_constraintTop_toBottomOf="@+id/security_card">

        <TextView
            android:id="@+id/text_home"
            style="@style/Base_TXV_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"

            android:padding="@dimen/_6sdp"
            android:text="@string/pwd_manager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/liflecycle_card"
        style="@style/BASE_CARD_1.MW"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintLeft_toRightOf="@+id/g_xleft"
        app:layout_constraintRight_toLeftOf="@+id/g_xright"
        app:layout_constraintTop_toBottomOf="@+id/pwd_manager_card">

        <TextView
            android:id="@+id/text_lifecycle"
            style="@style/Base_TXV_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"

            android:padding="@dimen/_6sdp"
            android:text="@string/lifecycle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/rateCard"
        style="@style/BASE_CARD_1.MW"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/g_xleft"
        app:layout_constraintRight_toLeftOf="@+id/g_xright"
        app:layout_constraintTop_toBottomOf="@+id/liflecycle_card">

        <TextView
            android:id="@+id/rateTxv"
            style="@style/Base_TXV_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"

            android:padding="@dimen/_6sdp"
            android:text="@string/rate_us"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/aboutUsCard"
        style="@style/BASE_CARD_1.MW"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/g_xleft"
        app:layout_constraintRight_toLeftOf="@+id/g_xright"
        app:layout_constraintTop_toBottomOf="@+id/rateCard">

        <TextView
            android:id="@+id/aboutTxv"
            style="@style/Base_TXV_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"

            android:padding="@dimen/_6sdp"
            android:text="@string/about_us"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/contactUsCard"
        style="@style/BASE_CARD_1.MW"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/g_xleft"
        app:layout_constraintRight_toLeftOf="@+id/g_xright"
        app:layout_constraintTop_toBottomOf="@+id/aboutUsCard">

        <TextView
            android:id="@+id/contactUsTxv"
            style="@style/Base_TXV_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="@dimen/_6sdp"
            android:text="@string/contact_us"
 />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/privacyPolicyCard"
        style="@style/BASE_CARD_1.MW"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/g_xleft"
        app:layout_constraintRight_toLeftOf="@+id/g_xright"
        app:layout_constraintTop_toBottomOf="@+id/contactUsCard">

        <TextView
            android:id="@+id/privacyPolicyTxv"
            style="@style/Base_TXV_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="@dimen/_6sdp"
            android:text="@string/privacy_policy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/appinfoCard"
        style="@style/BASE_CARD_1.MW"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/g_xleft"
        app:layout_constraintRight_toLeftOf="@+id/g_xright"
        app:layout_constraintTop_toBottomOf="@+id/shareCard">

        <TextView
            android:id="@+id/appinfoTxv"
            style="@style/Base_TXV_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="@dimen/_6sdp"
            android:text="@string/app_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/shareCard"
        style="@style/BASE_CARD_1.MW"
        android:layout_marginTop="@dimen/_8sdp"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/g_xleft"
        app:layout_constraintRight_toLeftOf="@+id/g_xright"
        app:layout_constraintTop_toBottomOf="@+id/privacyPolicyCard">

        <TextView
            android:id="@+id/shareTxv"
            style="@style/Base_TXV_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"

            android:padding="@dimen/_6sdp"
            android:text="@string/share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>